update JDK version