@@ -18,21 +18,21 @@
         </license>
     </licenses>
     <properties>
-        <wicket.version>8.14.0</wicket.version>
-        <jetty9.version>9.4.34.v20201102</jetty9.version>
-        <slf4j.version>1.7.25</slf4j.version>
+        <wicket.version>9.22.0</wicket.version>
+        <jetty9.version>9.4.58.v20250814</jetty9.version>
+        <slf4j.version>2.0.16</slf4j.version>
         <junit.version>4.13.1</junit.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wtp.version>none</wtp.version>
         <hibernate-core-version>5.6.15.Final</hibernate-core-version>
-        <spring.version>5.2.22.RELEASE</spring.version>
+        <spring.version>5.3.39</spring.version>
         <c3p0.version>0.9.5.5</c3p0.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>br.ufba.jnose</groupId>
             <artifactId>jnose-core</artifactId>
-            <version>0.8.6</version>
+            <version>0.9.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc -->
         <dependency>
@@ -127,19 +127,19 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>4.0.1</version>
             <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>com.googlecode.wicket-jquery-ui</groupId>
             <artifactId>wicket-jquery-ui</artifactId>
-            <version>8.3.0</version>
+            <version>9.22.0</version>
         </dependency>
         <dependency>
             <groupId>com.googlecode.wicket-jquery-ui</groupId>
             <artifactId>wicket-jquery-ui-theme-uilightness</artifactId>
-            <version>8.3.0</version>
+            <version>9.22.0</version>
         </dependency>
 
         <dependency>
@@ -275,19 +275,19 @@
         <dependency>
             <groupId>de.agilecoders.wicket</groupId>
             <artifactId>wicket-bootstrap-core</artifactId>
-            <version>3.0.0-M17</version>
+            <version>6.0.7</version>
         </dependency>
 
         <dependency>
             <groupId>de.agilecoders.wicket</groupId>
             <artifactId>wicket-bootstrap-extensions</artifactId>
-            <version>3.0.0-M17</version>
+            <version>6.0.7</version>
         </dependency>
 
         <dependency>
             <groupId>de.agilecoders.wicket</groupId>
             <artifactId>wicket-bootstrap-themes</artifactId>
-            <version>3.0.0-M17</version>
+            <version>6.0.7</version>
         </dependency>
     </dependencies>
     <build>
@@ -328,7 +328,7 @@
                 <inherited>true</inherited>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.6.1</version>
+                <version>3.13.0</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -344,14 +344,13 @@
                 <configuration>
                    <stopPort>9966</stopPort>
                    <stopKey>foo</stopKey>
-                    <!--					<jvmArgs>-Xms10024m -Xmx10024m -server -XX:+UseConcMarkSweepGC</jvmArgs>-->
-                    <!--<systemProperties>-->
-                    <!--<systemProperty>-->
-                    <!--<name>maven.project.build.directory.test-classes</name>-->
-                    <!--<value>${project.build.directory}/test-classes</value>-->
-                    <!--</systemProperty>-->
-                    <!--</systemProperties>-->
-                    <!--<jettyXml>${project.basedir}/src/test/jetty/jetty.xml,${project.basedir}/src/test/jetty/jetty-ssl.xml,${project.basedir}/src/test/jetty/jetty-http.xml,${project.basedir}/src/test/jetty/jetty-https.xml</jettyXml>-->
+                    <jvmArgs>-Xms1024m -Xmx2048m --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED</jvmArgs>
+                    <systemProperties>
+                        <systemProperty>
+                            <name>org.eclipse.jetty.server.webAppConfigurationClasses</name>
+                            <value>org.eclipse.jetty.webapp.WebInfConfiguration,org.eclipse.jetty.webapp.WebXmlConfiguration,org.eclipse.jetty.webapp.MetaInfConfiguration,org.eclipse.jetty.webapp.FragmentConfiguration,org.eclipse.jetty.webapp.JettyWebXmlConfiguration</value>
+                        </systemProperty>
+                    </systemProperties>
                 </configuration>
             </plugin>
             <plugin>
